objects/ccrz__E_HtmlCache__c.object
<CustomObject>
    <description>Stores the Category tree as HTML to be displayed in the catalog. This is populated by clicking the Menu Cache button on the CC Admin tab.</description>
    <fields>
        <fullName>ccrz__DirtyFlag__c</fullName>
        <label>Dirty Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__HtmlType__c</fullName>
        <description>Specifies which type of HTML this is for</description>
        <label>HTML Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category Tree</fullName>
                </value>
                <value>
                    <fullName>Top Menu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <label>Locale</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__MenuHtml__c</fullName>
        <label>Menu Html</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__OverflowMenuHtml__c</fullName>
        <label>Overflow Menu Html</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__OverflowTreeHtml__c</fullName>
        <label>Overflow Tree Html</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__StoreID__c</fullName>
        <label>Store ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TopLevelCategoryHtml__c</fullName>
        <label>Top Level Category Html</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__TreeHtml__c</fullName>
        <label>Tree Html</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>CC Html Cache</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__StoreID__c</columns>
        <columns>ccrz__Locale__c</columns>
        <columns>ccrz__DirtyFlag__c</columns>
        <columns>ccrz__HtmlType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__DefaultStore</fullName>
        <columns>NAME</columns>
        <columns>ccrz__HtmlType__c</columns>
        <columns>ccrz__Locale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__StoreID__c</field>
            <operation>equals</operation>
            <value>DefaultStore</value>
        </filters>
        <label>DefaultStore</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Html Cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Html Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>